--- a/rz_tours/web/index.html
+++ b/rz_tours/web/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="rz_tours">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>rz_tours</title>
+  <title>Razzaz Tours</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
